@@ -3,10 +3,7 @@ package no.nav.melosys.service.oppgave;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import no.nav.melosys.domain.Behandling;
 import no.nav.melosys.domain.Fagsak;
@@ -56,91 +53,84 @@ class OppgaveplukkerTest {
 
     private final static long BEHANDLING_ID = 123L;
     private final static long GSAK_SAKSNUMMER = 42L;
-    private final static String SAKSNUMMER = "MOCK-1";
     private final static String SAKSNUMMER_1 = "MEL-1111";
     private final static String SAKSNUMMER_2 = "MEL-2222";
     private final static String SAKSNUMMER_3 = "MEL-3333";
+    private final static String SAKSNUMMER_4 = "MEL-4444";
 
     @BeforeEach
     public void setUp() {
         this.oppgaveplukker = new Oppgaveplukker(oppgaveFasade, oppgaveTilbakkeleggingRepo, fagsakService, behandlingService, oppgaveService);
-
-        Behandling behandling = opprettBehandling();
-        Fagsak fagsak = opprettFagsak();
-        fagsak.setSaksnummer(SAKSNUMMER);
-        fagsak.setGsakSaksnummer(GSAK_SAKSNUMMER);
-        behandling.setFagsak(fagsak);
-
-        when(behandlingService.hentBehandling(BEHANDLING_ID)).thenReturn(behandling);
     }
 
     @Test
-    void plukkOppgave_toOppgaverMedPriHOYForskjelligFrist_plukkoppgaveHøyestFrist() {
+    void plukkOppgave_toOppgaverMedPriHOYForskjelligFrist_plukkoppgaveEldsteFrist() {
         List<Oppgave> oppgaver = new ArrayList<>();
         oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
-        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), "MEL-12"));
-        oppgaver.add(opprettOppgave("3", Oppgavetyper.JFR, PrioritetType.NORM, LocalDate.of(2018, 8, 10), "MEL-123"));
-        oppgaver.add(opprettOppgave("4", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 5), "MEL-1234"));
+        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), SAKSNUMMER_2));
+        oppgaver.add(opprettOppgave("3", Oppgavetyper.JFR, PrioritetType.NORM, LocalDate.of(2018, 8, 10), SAKSNUMMER_3));
+        oppgaver.add(opprettOppgave("4", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 5), SAKSNUMMER_4));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
-        Behandling behandling = opprettBehandling();
-        behandling.setStatus(Behandlingsstatus.OPPRETTET);
-        behandling.setFagsak(fagsak);
-        fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        Fagsak fagsak_4 = opprettFagsakMedBehandling(SAKSNUMMER_4);
+        List<Fagsak> fagsaker = List.of(opprettFagsakMedBehandling(SAKSNUMMER_1), opprettFagsakMedBehandling(SAKSNUMMER_2), opprettFagsakMedBehandling(SAKSNUMMER_3), fagsak_4);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(fagsaker);
+        when(fagsakService.hentFagsak(SAKSNUMMER_4)).thenReturn(fagsak_4);
+
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
 
+
         assertThat(oppgave).isPresent();
-        oppgave.ifPresent(o -> assertThat(o.getOppgaveId()).isEqualTo("4"));
+        oppgave.ifPresent(o -> assertThat(o.getSaksnummer()).isEqualTo(SAKSNUMMER_4));
     }
 
     @Test
     void plukkOppgave_toOppgaverMedPriHOYSammeFristForskjelligAktivDato_plukkoppgaveOpprettetSenest() {
         List<Oppgave> oppgaver = new ArrayList<>();
-        oppgaver.add(opprettOppgave("1", Oppgavetyper.BEH_SAK_MK, PrioritetType.LAV, LocalDate.of(2018, 8, 7), SAKSNUMMER_1));
-        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), "MEL-12"));
-        oppgaver.add(opprettOppgave("3", Oppgavetyper.BEH_SAK_MK, PrioritetType.NORM, LocalDate.of(2018, 8, 10), "MEL-123"));
-        oppgaver.add(opprettOppgave("4", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), "MEL-1234"));
+        oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
+        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), SAKSNUMMER_2));
+        oppgaver.add(opprettOppgave("3", Oppgavetyper.JFR, PrioritetType.NORM, LocalDate.of(2018, 8, 10), SAKSNUMMER_3));
+        oppgaver.add(opprettOppgave("4", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), SAKSNUMMER_4));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
-        Behandling behandling = opprettBehandling();
-        behandling.setStatus(Behandlingsstatus.OPPRETTET);
-        behandling.setFagsak(fagsak);
-        fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        Fagsak fagsak_2 = opprettFagsakMedBehandling(SAKSNUMMER_2);
+        List<Fagsak> fagsaker = List.of(opprettFagsakMedBehandling(SAKSNUMMER_1), fagsak_2, opprettFagsakMedBehandling(SAKSNUMMER_3), opprettFagsakMedBehandling(SAKSNUMMER_4));
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(fagsaker);
+        when(fagsakService.hentFagsak(SAKSNUMMER_2)).thenReturn(fagsak_2);
+
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
 
+
         assertThat(oppgave).isPresent();
-        oppgave.ifPresent(o -> assertThat(o.getOppgaveId()).isEqualTo("2"));
+        oppgave.ifPresent(o -> assertThat(o.getSaksnummer()).isEqualTo(SAKSNUMMER_2));
     }
 
     @Test
-    void plukkOppgave_avventerDokumentast_og_med_utløptsvarfrist() {
+    void plukkOppgave_avventerDokMedUtløptsvarfrist_plukkOppgave() {
         List<Oppgave> oppgaver = new ArrayList<>();
         oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2019, 8, 7), SAKSNUMMER_1));
-        oppgaver.add(opprettOppgave("2", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2018, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.AVVENT_DOK_PART);
         behandling.setDokumentasjonSvarfristDato(Instant.now().minus(Duration.ofDays(1)));
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
+        when(fagsakService.hentFagsak(SAKSNUMMER_1)).thenReturn(fagsak);
+
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
+
 
         assertThat(oppgave)
             .isPresent()
             .get()
             .extracting(Oppgave::getOppgaveId)
-            .isEqualTo("2");
-        assertThat(fagsak.hentAktivBehandling().getStatus()).isEqualTo(Behandlingsstatus.AVVENT_DOK_PART);
+            .isEqualTo("1");
     }
 
     @Test
@@ -149,76 +139,39 @@ class OppgaveplukkerTest {
         oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2019, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.AVVENT_FAGLIG_AVKLARING);
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
+
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
+
 
         assertThat(oppgave).isNotPresent();
     }
 
-    @Test
-    void plukkOppgave_1_tilbakelagt() {
-        List<Oppgave> oppgaver = new ArrayList<>();
-        oppgaver.add(opprettOppgave("1", Oppgavetyper.BEH_SAK_MK, PrioritetType.NORM, LocalDate.of(2018, 8, 7), SAKSNUMMER_1));
-        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.NORM, LocalDate.of(2018, 8, 8), SAKSNUMMER_2));
-        oppgaver.add(opprettOppgave("3", Oppgavetyper.VUR, PrioritetType.NORM, LocalDate.of(2018, 8, 9), SAKSNUMMER_3));
-        when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
-        Behandling behandling = opprettBehandling();
-        behandling.setStatus(Behandlingsstatus.OPPRETTET);
-        behandling.setFagsak(fagsak);
-        fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
-
-        List<OppgaveTilbakelegging> tilbakelagt = new ArrayList<>();
-        tilbakelagt.add(new OppgaveTilbakelegging());
-        when(oppgaveTilbakkeleggingRepo.findBySaksbehandlerIdAndOppgaveId(anyString(), eq("1"))).thenReturn(tilbakelagt);
-
-        Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
-
-        assertThat(oppgave).isPresent();
-        oppgave.ifPresent(o -> assertThat(o.getOppgaveId()).isEqualTo("2"));
-    }
-
-    @Test
-    void plukkOppgave_alle_tilbakelagt() {
-        List<Oppgave> oppgaver = new ArrayList<>();
-        oppgaver.add(opprettOppgave("1", Oppgavetyper.BEH_SAK_MK, PrioritetType.LAV, LocalDate.of(2018, 8, 7), SAKSNUMMER_1));
-        oppgaver.add(opprettOppgave("2", Oppgavetyper.BEH_SAK_MK, PrioritetType.HOY, LocalDate.of(2018, 8, 7), SAKSNUMMER_2));
-        oppgaver.add(opprettOppgave("3", Oppgavetyper.BEH_SAK_MK, PrioritetType.NORM, LocalDate.of(2018, 8, 7), SAKSNUMMER_3));
-        when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
-
-        Fagsak fagsak = opprettFagsak();
-        Behandling behandling = opprettBehandling();
-        behandling.setStatus(Behandlingsstatus.OPPRETTET);
-        behandling.setFagsak(fagsak);
-        fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
-
-        List<OppgaveTilbakelegging> tilbakelagt = new ArrayList<>();
-        tilbakelagt.add(new OppgaveTilbakelegging());
-        when(oppgaveTilbakkeleggingRepo.findBySaksbehandlerIdAndOppgaveId(anyString(), anyString())).thenReturn(tilbakelagt);
-
-        Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
-
-        assertThat(oppgave).isEmpty();
-    }
 
     @Test
     void leggTilbakeOppgave_medBegrunnelse() {
+        Behandling behandling = opprettBehandling();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
+        fagsak.setGsakSaksnummer(GSAK_SAKSNUMMER);
+        behandling.setFagsak(fagsak);
+
+        when(behandlingService.hentBehandling(BEHANDLING_ID)).thenReturn(behandling);
+
         final String oppgaveId = String.valueOf(GSAK_SAKSNUMMER);
         final Oppgave.Builder oppgaveBuilder = new Oppgave.Builder();
         oppgaveBuilder.setOppgaveId(oppgaveId);
         oppgaveBuilder.setPrioritet(PrioritetType.valueOf("HOY"));
         final String saksbehandlerID = "test";
         final String begrunnelse = "Oppgaven er kjedelig";
-        when(oppgaveService.hentÅpenBehandlingsoppgaveMedFagsaksnummer(SAKSNUMMER)).thenReturn(oppgaveBuilder.build());
+        when(oppgaveService.hentÅpenBehandlingsoppgaveMedFagsaksnummer(SAKSNUMMER_1)).thenReturn(oppgaveBuilder.build());
+
 
         when(oppgaveTilbakkeleggingRepo.save(any(OppgaveTilbakelegging.class))).then(arguments -> {
             OppgaveTilbakelegging oppgaveTilbakelegging = arguments.getArgument(0);
@@ -232,46 +185,40 @@ class OppgaveplukkerTest {
         tilbakelegging.setBehandlingID(BEHANDLING_ID);
         tilbakelegging.setBegrunnelse(begrunnelse);
 
+
         oppgaveplukker.leggTilbakeOppgave(saksbehandlerID, tilbakelegging);
 
-        verify(oppgaveTilbakkeleggingRepo, times(1)).save(any(OppgaveTilbakelegging.class));
+
+        verify(oppgaveFasade).leggTilbakeOppgave(oppgaveId);
+        verify(oppgaveTilbakkeleggingRepo).save(any(OppgaveTilbakelegging.class));
     }
 
     @Test
     void leggTilbakeOppgave_venterPåDokumentasjon() {
+        Behandling behandling = opprettBehandling();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
+        fagsak.setGsakSaksnummer(GSAK_SAKSNUMMER);
+        behandling.setFagsak(fagsak);
+
+        when(behandlingService.hentBehandling(BEHANDLING_ID)).thenReturn(behandling);
+
         final String oppgaveId = String.valueOf(GSAK_SAKSNUMMER);
         final Oppgave.Builder oppgaveBuilder = new Oppgave.Builder();
         oppgaveBuilder.setOppgaveId(oppgaveId);
         oppgaveBuilder.setPrioritet(PrioritetType.valueOf("HOY"));
         final String saksbehandlerID = "test";
-        when(oppgaveService.hentÅpenBehandlingsoppgaveMedFagsaksnummer(SAKSNUMMER)).thenReturn(oppgaveBuilder.build());
+        when(oppgaveService.hentÅpenBehandlingsoppgaveMedFagsaksnummer(SAKSNUMMER_1)).thenReturn(oppgaveBuilder.build());
 
         TilbakeleggingDto tilbakelegging = new TilbakeleggingDto();
         tilbakelegging.setBehandlingID(BEHANDLING_ID);
         tilbakelegging.setVenterPåDokumentasjon(true);
 
+
         oppgaveplukker.leggTilbakeOppgave(saksbehandlerID, tilbakelegging);
 
-        verify(oppgaveTilbakkeleggingRepo, times(0)).save(any(OppgaveTilbakelegging.class));
-    }
 
-    @Test
-    void plukkOppgave_brukerBehandlingstema_finnerOppgave() {
-        List<Oppgave> oppgaver = new ArrayList<>();
-        oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
-        when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
-
-        Fagsak fagsak = opprettFagsak();
-        Behandling behandling = opprettBehandling();
-        behandling.setStatus(Behandlingsstatus.OPPRETTET);
-        behandling.setFagsak(fagsak);
-        fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
-
-        Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
-
-        verify(oppgaveFasade).finnUtildelteOppgaverEtterFrist(anyString());
-        assertThat(oppgave).isPresent();
+        verify(oppgaveFasade).leggTilbakeOppgave(oppgaveId);
+        verify(oppgaveTilbakkeleggingRepo, never()).save(any(OppgaveTilbakelegging.class));
     }
 
     @Test
@@ -280,13 +227,13 @@ class OppgaveplukkerTest {
         oppgaver.add(opprettOppgave("1", Oppgavetyper.BEH_SAK_MK, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.AVVENT_DOK_PART);
         behandling.setDokumentasjonSvarfristDato(Instant.now().plus(Duration.ofDays(1)));
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
 
@@ -299,12 +246,12 @@ class OppgaveplukkerTest {
         oppgaver.add(opprettOppgave("1", Oppgavetyper.BEH_SAK_MK, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.AVVENT_DOK_PART);
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
 
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
 
@@ -317,16 +264,19 @@ class OppgaveplukkerTest {
         oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.SVAR_ANMODNING_MOTTATT);
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
+        when(fagsakService.hentFagsak(SAKSNUMMER_1)).thenReturn(fagsak);
 
         ArgumentCaptor<Behandling> behandlingCaptor = ArgumentCaptor.forClass(Behandling.class);
 
+
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
+
 
         verify(oppgaveFasade).finnUtildelteOppgaverEtterFrist(anyString());
         verify(behandlingService).lagre(behandlingCaptor.capture());
@@ -340,17 +290,20 @@ class OppgaveplukkerTest {
         oppgaver.add(opprettOppgave("1", Oppgavetyper.VUR, PrioritetType.LAV, LocalDate.of(2017, 8, 7), SAKSNUMMER_1));
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
 
-        Fagsak fagsak = opprettFagsak();
+        Fagsak fagsak = opprettFagsak(SAKSNUMMER_1);
         Behandling behandling = opprettBehandling();
         behandling.setStatus(Behandlingsstatus.OPPRETTET);
         behandling.setTema(Behandlingstema.PENSJONIST);
         behandling.setFagsak(fagsak);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
-        when(fagsakService.hentFagsak(anyString())).thenReturn(fagsak);
+        when(fagsakService.hentFagsaker(anyCollection())).thenReturn(List.of(fagsak));
+        when(fagsakService.hentFagsak(SAKSNUMMER_1)).thenReturn(fagsak);
 
         var plukkOppgaveInnDto = new PlukkOppgaveInnDto(Sakstyper.EU_EOS, Sakstemaer.MEDLEMSKAP_LOVVALG, Behandlingstema.PENSJONIST);
 
+
         Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", plukkOppgaveInnDto);
+
 
         verify(oppgaveFasade, times(2)).finnUtildelteOppgaverEtterFrist(anyString());
         assertThat(oppgave).isPresent();
@@ -364,11 +317,12 @@ class OppgaveplukkerTest {
             opprettOppgave("3", Oppgavetyper.BEH_SAK_MK, PrioritetType.NORM, LocalDate.of(2018, 8, 7), SAKSNUMMER_3)
         );
         when(oppgaveFasade.finnUtildelteOppgaverEtterFrist(anyString())).thenReturn(oppgaver);
-        when(fagsakService.hentFagsak(SAKSNUMMER_1)).thenReturn(opprettFagsakMedBehandling(Sakstyper.EU_EOS, Sakstemaer.MEDLEMSKAP_LOVVALG, Behandlingstema.YRKESAKTIV));
-        when(fagsakService.hentFagsak(SAKSNUMMER_2)).thenReturn(opprettFagsakMedBehandling(Sakstyper.EU_EOS, Sakstemaer.TRYGDEAVGIFT, Behandlingstema.UTSENDT_ARBEIDSTAKER));
-        when(fagsakService.hentFagsak(SAKSNUMMER_3)).thenReturn(opprettFagsakMedBehandling(Sakstyper.TRYGDEAVTALE, Sakstemaer.UNNTAK, Behandlingstema.UTSENDT_ARBEIDSTAKER));
+        Fagsak fagsak_1 = opprettFagsakMedBehandling(Sakstyper.EU_EOS, Sakstemaer.MEDLEMSKAP_LOVVALG, Behandlingstema.YRKESAKTIV);
+        Fagsak fagsak_2 = opprettFagsakMedBehandling(Sakstyper.EU_EOS, Sakstemaer.TRYGDEAVGIFT, Behandlingstema.UTSENDT_ARBEIDSTAKER);
+        Fagsak fagsak_3 = opprettFagsakMedBehandling(Sakstyper.TRYGDEAVTALE, Sakstemaer.UNNTAK, Behandlingstema.UTSENDT_ARBEIDSTAKER);
+        when(fagsakService.hentFagsaker(Set.of(SAKSNUMMER_1, SAKSNUMMER_2, SAKSNUMMER_3))).thenReturn(List.of(fagsak_1, fagsak_2, fagsak_3));
 
-        Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", opprettPlukkOppgaveInnDto());
+        Optional<Oppgave> oppgave = oppgaveplukker.plukkOppgave("Z01234", new PlukkOppgaveInnDto(Sakstyper.EU_EOS, Sakstemaer.MEDLEMSKAP_LOVVALG, Behandlingstema.UTSENDT_ARBEIDSTAKER));
 
         assertThat(oppgave).isEmpty();
     }
@@ -394,23 +348,35 @@ class OppgaveplukkerTest {
         return behandling;
     }
 
-    private Fagsak opprettFagsak() {
+    private Fagsak opprettFagsak(String saksnummer) {
+        return opprettFagsak(saksnummer, Sakstyper.EU_EOS, Sakstemaer.MEDLEMSKAP_LOVVALG);
+    }
+
+    private Fagsak opprettFagsak(String saksnummer, Sakstyper sakstype, Sakstemaer sakstema) {
         var fagsak = new Fagsak();
-        fagsak.setTema(Sakstemaer.MEDLEMSKAP_LOVVALG);
-        fagsak.setType(Sakstyper.EU_EOS);
+        fagsak.setSaksnummer(saksnummer != null ? saksnummer : UUID.randomUUID().toString());
+        fagsak.setType(sakstype);
+        fagsak.setTema(sakstema);
+        return fagsak;
+    }
+
+    private Fagsak opprettFagsakMedBehandling(String saksnummer) {
+        Fagsak fagsak = opprettFagsak(saksnummer);
+        Behandling behandling = opprettBehandling();
+        behandling.setStatus(Behandlingsstatus.OPPRETTET);
+        behandling.setFagsak(fagsak);
+        fagsak.setBehandlinger(Collections.singletonList(behandling));
         return fagsak;
     }
 
     private Fagsak opprettFagsakMedBehandling(Sakstyper sakstype, Sakstemaer sakstema, Behandlingstema behandlingstema) {
-        var fagsak = new Fagsak();
+        var fagsak = opprettFagsak(null, sakstype, sakstema);
         var behandling = new Behandling();
         behandling.setType(Behandlingstyper.FØRSTEGANG);
         behandling.setTema(behandlingstema);
         behandling.setStatus(Behandlingsstatus.AVVENT_DOK_PART);
         behandling.setDokumentasjonSvarfristDato(Instant.now().plus(Duration.ofDays(1)));
         behandling.setFagsak(fagsak);
-        fagsak.setType(sakstype);
-        fagsak.setTema(sakstema);
         fagsak.setBehandlinger(Collections.singletonList(behandling));
         return fagsak;
     }
